# robotic-arm

./: .gitignore  .gitmodules  README.md  docker-compose.yml
arm_dynamics/: Dockerfile  pyproject.toml
arm_dynamics/src/: main.py  utils.py
arm_dynamics/src/urdf/: PAROL6.urdf.xacro  gazebo.xacro
browser/: package-lock.json  package.json
browser/src/: App.tsx  Common.ts  Gallery.tsx  Pickup.tsx  Streaming.tsx
camera/: .gitignore  CMakeLists.txt  README.md  platformio.ini
camera/include/: camera.h  config.h.template  exif.h  exif_defines.h  http.h  httpd.h  manipulator.h  mqtt.h  pins.h  robot.h  sdcard.h  utils.h
camera/src/: Kconfig.projbuild  camera.cpp  exif.cpp  http.cpp  httpd.cpp  main.cpp  manipulator.cpp  mqtt.cpp  robot.cpp  sdcard.cpp  uploader.cpp  utils.cpp  wifi.cpp
camera_m5/: camera_m5.ino
camera_m5/src/: M5TimerCAM.h
camera_m5/src/utility/: Power_Class.cpp  exif.cpp  exif_defines.h
camera_m5_idf/: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig.esp32dev
camera_m5_idf/src/: Kconfig.projbuild  exif.c  exif.h  httpd.c  main.c  main.cpp  wifi.c
config/: mosquitto.conf  restheart.yml
image_stream_dumper/: Dockerfile  pyproject.toml
image_stream_dumper/src/: main.py
klipper/: .gitignore  parol6_octpus.cfg
state_sync/: .gitignore  README.md  main.py  state_sync.service
stl/: Mainboard.stl  gripper-holder-m5-gripper_m5_bridge.stl
utils/: .gitignore  README.md  auto_pickup.py  common.py  convert_all.sh  eval_act.py  eval_diff.py  execute_and_extract.sh  execute_path.py  extract_dataset.py  extract_path.py  path1.json  to_lerobot_dataset.py  train.py  train_act.py  train_diff.py
(+1 files in other folders)
